<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">QuizApplication</string>
    <string name="question1">What is the seventh planet from the sun?</string>
    <string name="answer1a">Earth</string>
    <string name="answer1b">Uranus</string>
    <string name="answer1c">Pluto</string>
    <string name="answer1d">Jupiter</string>
    <string name="solution">Solution</string>
    <string name="summary">Summary</string>
    <string name="next">Next</string>
    <string name="editText">Answer here!</string>
    <string name="editTextAlt">Click the button(s)</string>
    <string name="toastMessage">Congratulations!\n You gave <b><xliff:g id="count" example="0">%d</xliff:g></b> correct answers!</string>

    <string-array name="questions">
        <item>@string/question1</item>
        <item>Which of the following are animals (multiple choice)?</item>
        <item>Which is the animal referred as the ship of the desert? </item>
        <item>Which one is the plural of woman?</item>
    </string-array>
    <string-array name="answersA">
        <item>@string/answer1a</item>
        <item>Stone</item>
        <item> </item>
        <item>womans</item>
    </string-array>
    <string-array name="answersB">
        <item>@string/answer1b</item>
        <item>Tree</item>
        <item> </item>
        <item>men</item>
    </string-array>
    <string-array name="answersC">
        <item>@string/answer1c</item>
        <item>Cat</item>
        <item> </item>
        <item>womens</item>
    </string-array>
    <string-array name="answersD">
        <item>@string/answer1d</item>
        <item>Horse</item>
        <item> </item>
        <item>women</item>
    </string-array>
    <string-array name="correctAnswers">
        <item>0100</item>
        <item>0011</item>
        <item>Camel</item>
        <item>0001</item>
    </string-array>
    <string-array name="questionType">
        <item>singleChoice</item>
        <item>multipleChoice</item>
        <item>freeAnswer</item>
        <item>singleChoice</item>
    </string-array>
</resources>
