<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:src="@drawable/solarsystem"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:text="@string/question1"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:gravity="bottom">

        <Button
            android:id="@+id/buttonAnswer1"
            android:text="@string/answer1a"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:onClick="changeStatusOfButton"
            android:layout_margin="5dp"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/buttonAnswer2"
            android:text="@string/answer1b"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:onClick="changeStatusOfButton"
            android:layout_margin="5dp"
            android:textAllCaps="false"
            />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:gravity="bottom">

        <Button
            android:id="@+id/buttonAnswer3"
            android:text="@string/answer1c"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:onClick="changeStatusOfButton"
            android:layout_margin="5dp"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/buttonAnswer4"
            android:text="@string/answer1d"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:onClick="changeStatusOfButton"
            android:layout_margin="5dp"
            android:textAllCaps="false"
            />
    </LinearLayout>
    <Button
        android:id="@+id/buttonSolution"
        android:text="@string/solution"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:background="@drawable/buttonshapesolution"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:onClick="displaySolution"
        android:layout_margin="5dp"
        />
</LinearLayout>
